# PolyCOPY-Beast

./: .env.example  .gitignore  Cargo.toml  Dockerfile  SuperFast_PolyBot_v3_PRD_Enhanced.md  config.toml  docker-compose.yml  project_prd.md  project_prd_v2.5.md
docs/: windows-runbook.md
docs/superpowers/plans/: 2026-04-14-polybot-common.md  2026-04-17-polybot-v3-module-1-core-trading-engine.md  2026-04-17-polybot-workstream-1-core-correctness.md
docs/superpowers/specs/: 2026-04-14-superfast-polybot-v2-design.md  2026-04-17-polybot-prd-completion-design.md  2026-04-17-polybot-v3-module-execution-spec.md
polybot-common/: Cargo.toml
polybot-common/src/: constants.rs  errors.rs  types.rs
polybot-core/: Cargo.toml
polybot-core/src/: config.rs  dashboard_page.html  health.rs  main.rs  metrics.rs  setup.rs
polybot-core/src/execution/: clob_client.rs  clob_ws.rs  mod.rs  order_builder.rs  rate_limiter.rs  retry.rs  rpc_pool.rs  transport.rs
polybot-core/src/risk/: balance.rs  drawdown.rs  limits.rs  mod.rs  sizer.rs
polybot-core/src/scanner/: data_api.rs  dedup.rs  file_watcher.rs  http_ingest.rs  market_ws.rs  mod.rs  redis_ingest.rs  schema.rs  wallet_tracker.rs
polybot-core/src/state/: mod.rs  pnl.rs  positions.rs  reconciliation.rs  redis_backup.rs  redis_store.rs  sqlite.rs
polybot-core/src/telegram_bot/: alerts.rs  auth.rs  commands.rs  confirm.rs  mod.rs  rate_limiter.rs
polybot-dashboard/: Cargo.toml  Trunk.toml  index.html  style.css
polybot-dashboard/src/: app.rs  data.rs  main.rs
polybot-dashboard/src/components/: dashboard.rs  health_check.rs  mod.rs  position_table.rs  positions.rs  risk_summary.rs  risk_view.rs  signal_feed.rs  signals.rs
