[package]
name = "polybot-core"
version = "0.1.0"
edition = "2021"

[dependencies]
polybot-common = { path = "../polybot-common" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
rust_decimal = { version = "1", features = ["serde"] }
rust_decimal_macros = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
notify = "7"
redis = { version = "0.27", features = ["tokio-comp"] }
teloxide = { version = "0.14", features = ["macros"] }
axum = "0.8"
thiserror = "1"
futures = "0.3"
rusqlite = { version = "0.31", features = ["bundled"] }
polymarket-client-sdk = { version = "0.4", features = ["clob", "ws"] }
reqwest = { version = "0.12", features = ["json"] }

[dev-dependencies]
tokio = { version = "1", features = ["test-util", "macros"] }
