[package]
name = "polybot-dashboard"
version = "0.1.0"
edition = "2021"

[dependencies]
polybot-common = { path = "../polybot-common" }
leptos = { version = "0.7", features = ["csr"] }
leptos_meta = { version = "0.7" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
console_log = "1"
log = "0.4"
rust_decimal = { version = "1", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
gloo-net = { version = "0.6", features = ["json"] }
wasm-bindgen = "0.2"
